frontend/test/should_fail/defYield_005ie.grg
using defYield;

test t
{
	def -x:EE->;
	-y:EE->;
	pp:p(x, y);
}

pattern p(-x:EE->, def -z:EE->)
{
	-y:EE->;
	yield { yield x = y; }
}

